--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
-Flask==3.1.2
-flask-cors==6.0.2
+flask==3.0.0
+flask-cors==4.0.0
+psycopg2-binary==2.9.9
+python-jose[cryptography]==3.3.0
+requests==2.31.0
 gunicorn==21.2.0
-psycopg2-binary==2.9.11
-PyJWT==2.11.0
-python-jose==3.5.0
-requests==2.28.2
-cryptography==46.0.4
-Werkzeug==3.1.5
